[package]
name = "poh-yugen"
authors = ["YugenSource", "Silene0259"]
description = "A modern proof of history implementation in Rust"
license = "Apache-2.0"
repository = "https://github.com/YugenSource/PoH-yugen"
homepage = "yugensource.github.io"
keywords = ["proof of history", "poh", "rust", "cryptography"]
categories = ["Cryptography", "Security"]
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
digest = "0.10.7"
sha2 = "0.10.8"
hex = "0.4.3"